--- a/css/style.css
+++ b/css/style.css
@@ -10,6 +10,10 @@ ul{
     list-style: none;
 }
 
+img{
+    border-radius: 30px;
+}
+
 a{
     text-decoration: none;
 }
@@ -36,7 +40,7 @@ header{
     display: flex;
     align-items: center;
     justify-content: space-between;
-    z-index: 1;
+    z-index: 100;
 }
 
 .cabeceraIcon{
@@ -118,24 +122,95 @@ header label{
 
 /* inicio Automotores */
 .autos{
-    padding-top: 16vh;  
-    padding-left: 20px;
-    padding-right: 20px;
-    gap: 20px;
-    background-color: rgb(14, 14, 14);
-    display: grid;
-    grid-template-columns: 1fr 1fr;
-    justify-items: center;
+    padding: 16vh 20px 0 20px;  
+    gap: 30px;
+    display: flex;
+    justify-content: space-evenly;
+    flex-wrap: wrap;
     margin-bottom: 18vh;
+    position: relative;
+}
+
+.card{
+    position: relative;
+    overflow: hidden;
+    width: 580px;
+    height: 580px;
+}
+
+.card:hover{
+    transform: scale(1.03);
+    transition: all 1s ease;
+}
+
+.inputauto, .toggle{
+    position: absolute;
+    width: 50px;
+    height: 50px;
+    bottom: 20px;
+    left: 46%;
+    outline: none;
+    z-index: 1;
+}
+
+.inputauto{
+    opacity: 0;
+}
+
+.toggle{
+    pointer-events: none;
+    border-radius: 50%;
+    background: #fff;
+    transition: 0.5s;
+    text-align: center;
+    line-height: 50px;
+    font-size: 36px;
+    box-shadow: 0 0 0 0px rgba(255, 255, 255, 0.7);
+}
+
+.inputauto:checked ~ .toggle{
+    box-shadow: 0 0 0 700px rgba(255, 253, 253, 0.7);;
+    transform: rotate(225deg);
+}
+
+.imgBx, .details{
+    position: absolute;
+    top: 0;
+    left: 0;
+}
+
+.details{
+    padding: 13%;
+    box-sizing: border-box;
+    z-index: 1;
+    pointer-events: none;
+    transition: 0.5s;
+    opacity: 0;
+}
+
+input:checked ~ .details{
+    opacity: 1;
+    transition-delay: 0.5s;
+}
+
+.details h2{
+    margin-bottom: 16px;
+    font-size: 32px;
+    color: #000;
+}
+
+.details h6 ul li{
+    font-size: 16px;
+    color: #000;
 }
 
 #peugeot-308{
-    width: 90%;
+    width: 100%;
     border: 3px red solid;
 }
 
 #gol-trend{
-    width: 90%;
+    width: 100%;
     border: 3px red solid;
 }
 /* fin Automotores */
@@ -281,6 +356,11 @@ padding: 30px;
     width: 100%;
 }
 
+.fooster__item img:hover{
+    transform: translateY(-8px) scale(1.4);
+    transition: all 0.3s;
+}
+
 .footerContacto{
     background-color: rgb(14, 14, 14);
     display: flex;
@@ -334,24 +414,6 @@ padding: 30px;
     }
     .cabecera__lista li a{
         padding: 20px 8px;
-    }
-
-    .contacto__texto h2,
-    .contacto__mapa h2{
-        font-size:medium;
-    }
-
-    .autos{
-        display: flex;
-        flex-direction: column;
-    }
-
-    #peugeot-308{
-        width: 100%;
-    }
-    
-    #gol-trend{
-        width: 100%;
     }
 
     .fooster__ubicacion p{
@@ -410,11 +472,34 @@ padding: 30px;
 
     .sectionIndex img{
         width: 90%; 
+        border-radius: 30px;
+    }
+    
+    .card{
+        width: 300px;
+        height: 300px;
+    }
+
+    .details h2{
+        margin-bottom: 16px;
+        font-size: 20px;
+        color: #000;
+    }
+    
+    .details h6 ul li{
+        font-size: 11px;
+        color: #000;
     }
 
     .llantas img{
         width: 70vw;
     }
+
+    .contacto__texto h2,
+    .contacto__mapa h2{
+        font-size:medium;
+    }
+
     .contacto__texto form ul li input{
         width: 200px;
         padding: 5px; 
@@ -438,7 +523,7 @@ padding: 30px;
         flex-wrap: wrap;
     } 
     .fooster__icon{
-        width: 30px;
+        width: 35px;
     } 
 /* fin fooster */
 }
