--- a/css/style.css
+++ b/css/style.css
@@ -1,6 +1,6 @@
 *{
   margin: 0;
-  padding: 0;
+  padding: 0 ; 
   box-sizing: border-box;
   font-family: Arial, Helvetica, sans-serif;
   text-decoration: none;
@@ -35,8 +35,7 @@ header{
   z-index: 100;
 }
 .cabeceraIcon{
-  width: 75px;
-  height: 75px;
+  width: 59px;
   margin: 8px;
 }
 .navbar ul{
@@ -49,7 +48,7 @@ header{
 }
 .cabecera__lista li a{
   font-size: 18px;
-  padding: 20px;
+  padding: 15px 20px;
   color: rgb(255, 255, 255);
   display: block;
 }
@@ -92,45 +91,49 @@ header label{
 
 /* -------Carousel------- */
 .carousel-caption {
-  bottom: 3rem;
   z-index: 1;
+  bottom: 4rem;
+  left: 9%;
 }
 .carousel-item {
   height: 35rem;
   background-color: #777;
+  
 } 
 .carousel-item > img {
-  position: absolute;
-  top: -20px;
-  left: -40px;
-  min-width: 110%;
+  z-index: 1;
+  min-width: 1500px;
   height: 120%; 
-  opacity: 0.7; 
+  width: 110%;
+}
+.carousel-control-next, .carousel-control-prev{
+  width: 9%;
 }
 .carousel-caption h2{
-  font-size: 2.5vw;
-  color: rgb(200, 2, 2);
-  padding: 2%;
+  font-size: 2rem;
+  color: rgb(200, 2, 2) !important;
+  padding: 1%;
+  width: 420px;
   font-weight: 1000;
   font-style: italic;
   text-transform:uppercase;
-  margin-bottom: 20rem;
+  margin-bottom: 10rem;
+  margin-right: 5rem;
   background: rgba(0, 0, 0, 0.4);
   border-radius: 15px;
   border: rgb(175, 0, 0) 5px solid;
 }
-.carousel-caption p{
-  font-size: 2vw;
-  color: rgba(255, 255, 255, 1);
-  font-weight: 600;
+.carousel-caption h4{
+  padding: 0.5rem;
+  font-weight: 800;
+  font-size: 1.5rem;
   font-style: italic;
   text-transform:uppercase;
+  color: #fff;
 }
-.carousel-caption {
-  left: 5%;
-  right: 50%;
-  bottom: 3rem;
-  padding: 0;
+.carousel-caption img{
+  width: 17%;
+  margin-bottom: 8rem;
 }
 .carousel-indicators {
   bottom: -2%;
@@ -140,27 +143,39 @@ header label{
 }
 
 /* -------inicio Automotores------- */
+#automotores{
+  padding: 50px 20px 0 20px;
+}
 .autos{
-  padding: 10vh 20px 0 20px;
   gap: 20px;
   display: flex;
   justify-content: space-evenly;
   flex-wrap: wrap;
   position: relative;
+  padding-top: 50px;
 }
-.automotores{
+.contactop{
   position: relative;
-  top: 4.2vh;
-  margin-right: auto;
+  top: -3vh;
   font-size: 30px;
   color: rgba(255, 0, 0, 0.7);
   font-weight: 600;
   font-style: italic;
   text-transform:uppercase;
 }
+.automotores{
+  position: relative;
+  top: 4.2vh;
+  font-size: 30px;
+  color: rgba(255, 0, 0, 0.7);
+  font-weight: 600;
+  font-style: italic;
+  text-transform:uppercase;
+  width: auto;
+}
 .linea{
   position: relative;
-  top: .5vh;
+  top: 22px;
   width: 100%;
   height: 4px;
   background: rgba(255, 0, 0, 0.7);
@@ -171,9 +186,11 @@ header label{
   overflow: hidden;
   width: 580px;
   height: 580px;
+  border: 3.5px red solid;
+  border-radius: 30px;
 }
-.card:hover{
-  transform: scale(1.03);
+.imgBx:hover{
+  transform: scale(1.1);
   transition: all 1s ease;
 }
 .inputauto, .toggle{
@@ -230,17 +247,15 @@ input:checked ~ .details{
 }
 #peugeot-308{
   width: 100%;
-  border: 3px red solid;
 }
 #gol-trend{
   width: 100%;
-  border: 3px red solid;
 }
 /* fin Automotores */
 
 /* -------Inicio chapa y pintura------- */
 .chapa-y-pintura{
-  padding: 17vh 20px 0 20px;
+  padding: 100px 20px 0 20px;
 }
 .chapa-y-pintura img{
   border-radius: 30px;
@@ -264,8 +279,12 @@ input:checked ~ .details{
   z-index: 50;
 }
 .lead{
+  padding-left: 1%;
+}
+.lead li{
   color: #fff;
   padding-top: 10%;
+  padding-left: 1%;
   font-size: 2vw;
 }
 .col-md-7 h2{
@@ -289,9 +308,19 @@ input:checked ~ .details{
 }
 
 /* -------inicio llantas------- */
+.llantas{
+  padding: 100px 20px 0 20px;
+}
+.llantasdiv h3{
+  display: flex;
+  justify-content:center;
+  padding: 1%;
+  background: rgba(255, 0, 0, 0.7);
+  color: white;
+  font-size: 2.5vw;
+}
 .llantasp{
   position: relative;
-  margin-right: auto;
   top: -3vh;
   font-size: 30px;
   color: rgba(255, 0, 0, 0.7);
@@ -302,73 +331,73 @@ input:checked ~ .details{
 .lineallanta{
   position: relative;
   top: -3vh;
-  width: 100%;
   height: 4px;
   background: rgba(255, 0, 0, 0.7);
-  z-index: 50;
 }
-.llantas{
-  padding: 17vh 20px 0 20px;
-  background-color: rgb(14, 14, 14);;
-  color: white;
-}
-.llantas img{
-  border-radius: 30px;
-}
-.llantas img:hover{
-  transform: scale(1.1);
+.llantasdiv img:hover{
+  transform: scale(1.2);
   transition: all 1s ease;
 }
 .llantas__18{
   display: flex;
   flex-wrap: wrap;
+  flex-direction: column;
+  padding: 2%;
+  padding-bottom: 4%;
 }
 .llantas__18 div{
-  padding-bottom: 30px;
   margin: auto;
+  overflow: hidden;
+  border: 3px red solid;
+  border-radius: 30px;
 }
 .llantas__18 img{
   width: 30%;
-  border: 3px red solid;
   width: 40vw;
 }
 .llantas__17{
   display: flex;
   flex-wrap: wrap;
+  flex-direction: row;
+  padding: 2%;
+  padding-bottom: 4%;
 }
 .llantas__17 div{
-  padding-bottom: 30px;
   margin: auto;
+  overflow: hidden;
+  border: 3px red solid;
+  border-radius: 30px;
+  width: 40vw;
+  height: 42.2vw;
 }
 .llantas__17 img{
-  border: 3px red solid;
   width: 40vw;
 }
 .llantas__16{
   display: flex;
   flex-wrap: wrap;
+  gap: 20px;
+  padding: 2%;
+  padding-bottom: 0;
 }
 .llantas__16 div{
-  padding-bottom: 30px;
   margin: auto;
+  overflow: hidden;
+  border: 3px red solid;
+  border-radius: 30px;
 }
 .llantas__16 img{
   width: 30%;
-  border: 3px red solid;
   width: 40vw;
-}
-.llantasdiv p{
-  display: flex;
-  justify-content:center;
-  align-items: flex-start;
 }
 /* fin llantas */
 
 /* -------Contacto------- */
+#contacto{
+  padding: 100px 20px 0 20px;
+}
 .contactop{
-  padding: 17vh 20px 0 20px;
   position: relative;
-  margin-right: auto;
   top: -3vh;
   font-size: 30px;
   color: rgba(255, 0, 0, 0.7);
@@ -411,17 +440,22 @@ input:checked ~ .details{
 }
 
 /* -------footer------- */
-
+.container{
+  max-width: 100%;
+}
 .containerp{
-  color: #fff;
+  color: #fff !important;
   margin-top: 2%;
 }
 .fooster__item{
-padding-bottom: 2%;
+  padding-bottom: 2%;
 }
 .fooster__icon{
-  width: 30%;
+  width: 700px;
   color: #fff;
+}
+.fab{
+  font-size: 3.5vw;
 }
 .fooster__icon:hover{
   transform: translateY(-8px) scale(1.4);
@@ -468,11 +502,22 @@ color: #35b81e;
     flex: 0 0 auto;
     height: 80%;
   }
-  .rounded {
-    height: 20%;
-    width: 30%;
-    border: 3px red solid;
-}
+  .llantasdiv h3{
+    font-size: 3vw;
+  }
+  .fab{
+    font-size: 4.5vw;
+  }
+  .container{
+    max-width: 100%;
+  }
+  .carousel-caption h2{
+    font-size: 1.5rem;
+    width: 320px;
+  }
+  .carousel-caption h4{
+    font-size: 1.2rem;
+  }
 }
 
 @media(max-width:800px){
@@ -480,7 +525,7 @@ color: #35b81e;
       padding: 0px 0.5% 0 0.5%;
   }
   .cabecera__lista li a{
-      padding: 20px 8px;
+      padding: 15px 8px;
   }
   /* inicio carousel */
   .carousel-item {
@@ -491,24 +536,29 @@ color: #35b81e;
     position: absolute;
     top: -10px;
     left: 0px;
-    min-width: 100%;
+    min-width: 200px;
     height: 110%; 
   }
   .carousel-caption h2{
     font-weight: 600;
-    margin-bottom: 13rem;
+    margin-bottom: 8rem;
+    width: 290px;
   }
-  .carousel-caption p{
-    color: rgba(255, 255, 255, 1);
-    font-weight: 600;
-    font-style: italic;
-    text-transform:uppercase;
-  } 
   .carousel-caption {
     left: 5%;
-    right: 50%;
     bottom: 1.8rem;
     padding: 0;
+  }
+  .btn{
+    font-size: 1rem;
+    --bs-btn-padding-y: 0.2rem;
+    --bs-btn-padding-x: 0.8rem;
+  }
+  .carousel-caption img {
+    margin-bottom: 6rem;
+  }
+  .carousel-caption h4{
+    font-size: 0.8rem;
   }
   .automotores{
     font-size: 3.7vw;
@@ -521,6 +571,9 @@ color: #35b81e;
     }
   .contactop{
     font-size: 3.7vw;
+    }
+    .fab{
+      font-size: 5.5vw;
     }
 }
 
@@ -576,8 +629,22 @@ color: #35b81e;
     }
     .carousel-caption h2{
       font-weight: 600;
-      margin-bottom: 6.3rem;
+      font-size: 18px;
+      margin-bottom: 3rem;
+      width: 215px;
     }
+    .btn{
+      font-size: 0.7rem;
+      --bs-btn-padding-y: 0.2rem;
+      --bs-btn-padding-x: 0.8rem;
+    }
+    .carousel-caption img {
+      margin-bottom: 3rem;
+    }
+    .carousel-caption h4{
+      padding: 0rem;
+      font-size: 0.6rem;
+    } 
 
     /* automotores */
     .sectionIndex img{
@@ -597,10 +664,31 @@ color: #35b81e;
         font-size: 11px;
         color: #000;
     }
-    .autos{
-      padding: 9vh 20px 0 20px;
+    .llantasdiv h3{
+      font-size: 3.5vw;
     }
-    .chapa-y-pintura{
-      padding: 17vh 20px 0 20px;
+    .fab{
+      font-size: 7vw;
+    }
+    .h1-responsive{
+      font-size: 4.5vw;
+    }
+    .texto{
+      font-size: 4.5vw;
+    }
+    .ubi{
+      font-size: 20px;
+    }
+    .list-unstyled p{
+      font-size: 14px;
+    }
+    .newsletter-card {
+      max-width: 450px;
+    }
+    .newsletter-card h3{
+      font-size: 20px;
+    }
+    .containerp{
+      font-size: 14px;
     }
 }  
